# campaign-optimizer

./: .gitignore  README.md  pyproject.toml
campaign_optimizer/: __init__.py  optimizer.py
campaign_optimizer/models/: roi_curve.py
tests/: test_optimizer.py
