[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "campaign-optimizer"
version = "0.1.0"
description = "Campaign budget optimization — ROI curve modeling, channel allocation, mid-flight rebalancing"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.5"]
